unpackaged/main/default/objects/EventApi__Event_Chatter_Groups__c/EventApi__Event_Chatter_Groups__c.object-meta.xml
<CustomObject>
    <label>Event Chatter Groups</label>
    <nameField>
        <displayFormat>ECR-{00000000}</displayFormat>
        <label>Event Chatter Groups Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Chatter Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>