unpackaged/main/default/objects/EventApi__Event_Chatter_Groups__c/fields/EventApi__Collaboration_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Collaboration_Group_Id__c</fullName>
    <description>Collaboration Group ID</description>
    <inlineHelpText>Collaboration Group Id</inlineHelpText>
    <label>Collaboration Group Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>