unpackaged/main/default/objects/EventApi__Event_Chatter_Groups__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up to Event</description>
    <inlineHelpText>Look up to Event</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Event Chatter Groups</relationshipLabel>
    <relationshipName>Event_Chatter_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>