unpackaged/main/default/objects/EventApi__Event_Chatter_Groups__c/fields/EventApi__Group_Id__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Group_Id__c</fullName>
    <description>Group ID</description>
    <displayFormat>{00000000}</displayFormat>
    <inlineHelpText>Group ID</inlineHelpText>
    <label>Group Id</label>
    <type>AutoNumber</type>
</CustomField>