unpackaged/main/default/objects/EventApi__Event_Chatter_Groups__c/fields/EventApi__Group_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Group_Name__c</fullName>
    <description>Group Name</description>
    <inlineHelpText>Group Name</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>